# oed_fcs

./: .gitignore  MANIFEST.in  requirements.txt  setup.cfg
examples/: aging_model_pipeline.py  polynomial_model_pipeline.py  uncertainty_model_pipeline.py
notebooks/: pi_workflow_example.ipynb
oed/benchmarking/: benchmarking.py
oed/experiments/experiment_library/: d_design.py  latin_hypercube.py  pi_design.py  point_prediction_design.py  random.py
oed/metrics/error_functions/: average_error.py  mean_squared_error.py
oed/metrics/interfaces/: metric.py
oed/metrics/metric_library/: determinant_of_fisher_information_matrix.py  estimation_mean_error.py  estimation_mean_parameter_estimations.py  k_fold_cross_validation.py  leave_one_out_validation.py  std_parameter_estimations.py
oed/minimizer/minimizer_library/: differential_evolution.py  slsqp.py
oed/parametric_function_library/: aging_model.py  linear_function.py
oed/statistical_models/interfaces/: statistical_model.py
oed/statistical_models/statistical_model_library/: gaussian_noise_model.py
oed/uncertainty_quantification/: parametric_function_with_uncertainty.py
oed/uncertainty_quantification/probability_measures/: multivariate_gaussian.py
src/oed/benchmarking/: benchmarking.py
src/oed/metrics/interfaces/: metric.py
src/oed/parametric_function_library/: aging_model.py  linear_function.py
src/oed/uncertainty_quantification/: parametric_function_with_uncertainty.py
tests/designs_of_experiments/experiment_library/: test_d_desgin.py  test_latin_hypercube.py  test_pi_design.py  test_random.py
(+22 files in other folders)
