[metadata]
name = oed
version = 0.0.1
license = MIT
description = Package for experimental experiment
long_description = file: README.md
author = Nico Palm
author_email = nicolaipalm@googlemail.com
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning


[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    plotly
    scipy
    pandas
    tqdm
    scikit-learn
    flake8
    black
    pre-commit
    autopep8
    isort

[options.packages.find]
where = src
include =
    oed
exclude =
    tests
    examples
